RESOLVED FIXED 187250
InstanceOf IC should do generic if the prototype is not an object.
https://bugs.webkit.org/show_bug.cgi?id=187250
Summary InstanceOf IC should do generic if the prototype is not an object.
Keith Miller
Reported 2018-07-02 09:36:55 PDT
InstanceOf IC should do generic if the prototype is not an object.
Attachments
Patch (4.89 KB, patch)
2018-07-02 09:50 PDT, Keith Miller
no flags
Patch for landing (4.94 KB, patch)
2018-07-02 10:14 PDT, Keith Miller
no flags
Keith Miller
Comment 1 2018-07-02 09:50:22 PDT
Keith Miller
Comment 2 2018-07-02 09:56:59 PDT
Mark Lam
Comment 3 2018-07-02 10:12:28 PDT
Comment on attachment 344109 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=344109&action=review r=me > Source/JavaScriptCore/jit/Repatch.cpp:743 > if (!jsDynamicCast<JSObject*>(vm, value)) { Fix this indentation.
Keith Miller
Comment 4 2018-07-02 10:13:42 PDT
Comment on attachment 344109 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=344109&action=review >> Source/JavaScriptCore/jit/Repatch.cpp:743 >> if (!jsDynamicCast<JSObject*>(vm, value)) { > > Fix this indentation. Whoops, fixed.
Keith Miller
Comment 5 2018-07-02 10:14:13 PDT
Created attachment 344113 [details] Patch for landing
Saam Barati
Comment 6 2018-07-02 10:18:23 PDT
Comment on attachment 344113 [details] Patch for landing View in context: https://bugs.webkit.org/attachment.cgi?id=344113&action=review > Source/JavaScriptCore/ChangeLog:3 > + InstanceOf IC should do generic if the prototype is not an object. do generic => go generic
Keith Miller
Comment 7 2018-07-02 10:20:19 PDT
Comment on attachment 344113 [details] Patch for landing View in context: https://bugs.webkit.org/attachment.cgi?id=344113&action=review >> Source/JavaScriptCore/ChangeLog:3 >> + InstanceOf IC should do generic if the prototype is not an object. > > do generic => go generic I don't think that's accurate since you can still have Hit/Miss cases even with a generic case.
Saam Barati
Comment 8 2018-07-02 10:54:26 PDT
I'm just talking about the english of your title. "Generic" is not a thing you "do". Perhaps "become" is the right word
WebKit Commit Bot
Comment 9 2018-07-02 11:04:14 PDT
The commit-queue encountered the following flaky tests while processing attachment 344113 [details]: fetch/fetch-worker-crash.html bug 187257 (author: youennf@gmail.com) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 10 2018-07-02 11:05:02 PDT
Comment on attachment 344113 [details] Patch for landing Clearing flags on attachment: 344113 Committed r233427: <https://trac.webkit.org/changeset/233427>
WebKit Commit Bot
Comment 11 2018-07-02 11:05:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.