InstanceOf IC should do generic if the prototype is not an object. https://bugs.webkit.org/show_bug.cgi?id=187250

Reviewed by Mark Lam.

JSTests:

* stress/instanceof-non-object-prototype.js: Added.
(let):
(test):
(i.catch):

Source/JavaScriptCore:

The old code was wrong for two reasons. First, the AccessCase expected that
the prototype value would be non-null. Second, we would end up returning
false instead of throwing an exception.

* jit/Repatch.cpp:
(JSC::tryCacheInstanceOf):


Canonical link: https://commits.webkit.org/202512@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233427 268f45cc-cd09-0410-ab3c-d52691b4dbfc